language-server/src/tests/snapshots/gleam_core__language_server__tests__action__import_type_constructor_unqualified_with_existing_import_with_unqualified_items.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport wibble.{type Wibble}\n\nfn wibble() -> Nil {\n    Wobble\n    Nil\n}\n"
---
----- BEFORE ACTION

import wibble.{type Wibble}

fn wibble() -> Nil {
    Wobble
    ↑     
    Nil
}


----- AFTER ACTION

import wibble.{type Wibble, Wobble}

fn wibble() -> Nil {
    Wobble
    Nil
}
