language-server/src/tests/snapshots/gleam_core__language_server__tests__action__import_type_unqualified_with_existing_import.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport wibble\n\nfn wibble(wobble: Wibble) -> Nil { Nil }\n"
---
----- BEFORE ACTION

import wibble

fn wibble(wobble: Wibble) -> Nil { Nil }
                  ↑                     


----- AFTER ACTION

import wibble.{type Wibble}

fn wibble(wobble: Wibble) -> Nil { Nil }
