language-server/src/tests/snapshots/gleam_core__language_server__tests__action__import_type_unqualified_with_existing_import_without_alias.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport wibble as _\n\nfn wibble(wobble: Wibble) -> Nil { Nil }\n"
---
----- BEFORE ACTION

import wibble as _

fn wibble(wobble: Wibble) -> Nil { Nil }
                  ↑                     


----- AFTER ACTION

import wibble.{type Wibble}
import wibble as _

fn wibble(wobble: Wibble) -> Nil { Nil }
