language-server/src/tests/snapshots/gleam_core__language_server__tests__action__import_type_unqualified_without_existing_import.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport wobble\n\nfn wibble(wobble: Wibble) -> Nil { Nil }\n"
---
----- BEFORE ACTION

import wobble

fn wibble(wobble: Wibble) -> Nil { Nil }
                  ↑                     


----- AFTER ACTION

import wibble.{type Wibble}
import wobble

fn wibble(wobble: Wibble) -> Nil { Nil }
